--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 a {
-  color: #dc3545;
+  color: black;
 }
 
 a:hover {
@@ -52,7 +52,7 @@ h6 {
 # Top Bar
 --------------------------------------------------------------*/
 #topbar {
-  background: #B70000;
+  background: black;
   height: 40px;
   font-size: 14px;
   transition: all 0.5s;
@@ -126,7 +126,7 @@ h6 {
 }
 
 #header .logo a span {
-  color: #dc3545;
+  color: black;
 }
 
 #header .logo img {
@@ -181,7 +181,7 @@ h6 {
   height: 2px;
   bottom: -5px;
   left: 0;
-  background-color:#dc3545;
+  background-color:black;
   visibility: hidden;
   width: 0px;
   transition: all 0.3s ease-in-out 0s;
@@ -197,7 +197,7 @@ h6 {
 .nav-menu a:hover,
 .nav-menu .active > a,
 .nav-menu li:hover > a {
-  color: #dc3545;
+  color: black;
 }
 
 @media (max-width: 1366px) {
@@ -266,7 +266,7 @@ h6 {
 .mobile-nav a:hover,
 .mobile-nav .active > a,
 .mobile-nav li:hover > a {
-  color: #dc3545;
+  color: black;
   text-decoration: none;
 }
 
@@ -326,8 +326,8 @@ h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 100%;
-  background: url("../img/hero-bg.jpg") top left;
+  height: 840px;
+  
   background-size: cover;
   position: relative;
 }
@@ -363,7 +363,7 @@ h6 {
 }
 
 #hero h1 span {
-  color: #dc3545;
+  color: black;
 }
 
 #hero h2 {
@@ -384,7 +384,7 @@ h6 {
   border-radius: 4px;
   transition: 0.5s;
   color: #fff;
-  background: #dc3545;
+  background: black;
 }
 
 #hero .btn-get-started:hover {
@@ -403,7 +403,7 @@ h6 {
 }
 
 #hero .btn-watch-video i {
-  color: #dc3545;
+  color: black;
   font-size: 32px;
   position: absolute;
   left: 0;
@@ -412,7 +412,7 @@ h6 {
 }
 
 #hero .btn-watch-video:hover {
-  color: #dc3545;
+  color: black;
 }
 
 #hero .btn-watch-video:hover i {
@@ -474,7 +474,7 @@ section {
   padding: 8px 20px;
   margin: 0;
   background: #e7f1fd;
-  color: #dc3545;
+  color: black;
   display: inline-block;
   text-transform: uppercase;
   border-radius: 50px;
@@ -487,7 +487,7 @@ section {
 }
 
 .section-title h3 span {
-  color: #dc3545;
+  color: black;
 }
 
 .section-title p {
@@ -593,7 +593,7 @@ section {
 }
 
 .featured-services .icon-box:hover::before {
-  background: #dc3545;
+  background: black;
   top: 0;
   border-radius: 0px;
 }
@@ -605,7 +605,7 @@ section {
 .featured-services .icon i {
   font-size: 48px;
   line-height: 1;
-  color: #dc3545;
+  color: black;
   transition: all 0.3s ease-in-out;
 }
 
@@ -663,7 +663,7 @@ section {
   font-size: 24px;
   padding: 20px;
   margin-right: 15px;
-  color: #dc3545;
+  color: black;
   border-radius: 50px;
 }
 
@@ -703,7 +703,7 @@ section {
   left: 50%;
   transform: translateX(-50%);
   font-size: 24px;
-  background: #dc3545;
+  background: black;
   padding: 12px;
   color: #fff;
   border-radius: 50px;
@@ -781,11 +781,11 @@ section {
 
 .services .icon-box:hover h4 a,
 .services .icon-box:hover .icon i {
-  color: #dc3545;
+  color: black;
 }
 
 .services .icon-box:hover .icon {
-  border-color: #dc3545;
+  border-color: black;
 }
 
 /*--------------------------------------------------------------
@@ -818,7 +818,7 @@ section {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  color: #dc3545;
+  color: black;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -865,7 +865,7 @@ section {
 
 .portfolio .portfolio-item .portfolio-info .preview-link:hover,
 .portfolio .portfolio-item .portfolio-info .details-link:hover {
-  color: #dc3545;
+  color: black;
 }
 
 .portfolio .portfolio-item .portfolio-info .details-link {
@@ -931,7 +931,7 @@ section {
 }
 
 .portfolio-details .portfolio-details-carousel .owl-dot.active {
-  background-color: #dc3545 !important;
+  background-color: black !important;
 }
 
 .portfolio-details .portfolio-info {
@@ -1007,7 +1007,7 @@ section {
 
 .contact .info-box i {
   font-size: 32px;
-  color: #dc3545;
+  color: black;
   border-radius: 50%;
   padding: 8px;
   border: 2px dotted #b3d1fa;
@@ -1091,7 +1091,7 @@ section {
 
 .contact .php-email-form input:focus,
 .contact .php-email-form textarea:focus {
-  border-color: #dc3545;
+  border-color: black;
 }
 
 .contact .php-email-form input {
@@ -1103,7 +1103,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #dc3545;
+  background: black;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1161,7 +1161,7 @@ section {
 }
 
 #footer .footer-top .footer-contact h3 span {
-  color: #dc3545;
+  color: black;
 }
 
 #footer .footer-top .footer-contact p {
@@ -1192,7 +1192,7 @@ section {
 
 #footer .footer-top .footer-links ul i {
   padding-right: 2px;
-  color: #dc3545;
+  color: black;
   font-size: 18px;
   line-height: 1;
 }
@@ -1216,13 +1216,13 @@ section {
 
 #footer .footer-top .footer-links ul a:hover {
   text-decoration: none;
-  color: #dc3545;
+  color: black;
 }
 
 #footer .footer-top .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #dc3545;
+  background: black;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
