--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -1264,7 +1264,7 @@ section {
 /* news */
 
 /* move special fonts to HTML head for better performance */
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:200,300,400,600,700");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,600,700");
 
 /* custom template */
 html,
