--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -181,7 +181,7 @@ h6 {
   height: 2px;
   bottom: -5px;
   left: 0;
-  background-color:black;
+  background-color: black;
   visibility: hidden;
   width: 0px;
   transition: all 0.3s ease-in-out 0s;
@@ -327,7 +327,7 @@ h6 {
 #hero {
   width: 100%;
   height: 840px;
-  
+
   background-size: cover;
   position: relative;
 }
@@ -1474,9 +1474,8 @@ small.text-muted {
 
 .carousel-inner {
   width: 1000px;
-  margin-top:6.9px;
+  margin-top: 6.9px;
 }
-
 
 .b-0 {
   bottom: 0;
@@ -1530,17 +1529,61 @@ small.text-muted {
 }
 
 .container {
-  max-width: 2000px
+  max-width: 2000px;
 }
 
 .carousel {
-  width: 100%
-}
-
-.image-wrapper{
   width: 100%;
 }
 
-.carousel-inner{
+.image-wrapper {
   width: 100%;
+}
+
+.carousel-inner {
+  width: 100%;
+}
+
+@media screen and (max-width: 993px) {
+  #news-carousel {
+    margin-top: 0px;
+  }
+}
+@media screen and (max-width: 768px) {
+  #carousel-item-img {
+    height: 400px;
+  }
+  .post-title {
+    font-size: 25px;
+  }
+  #news-carousel {
+    margin-top: 0px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #carousel-item-img {
+    height: 300px;
+  }
+  .post-title {
+    font-size: 20px;
+  }
+  #news-carousel {
+    margin-top: 0px;
+  }
+}
+
+
+
+
+@media screen and (max-width: 450px) {
+  #carousel-item-img {
+    height: 200px;
+  }
+  .post-title {
+    font-size: 15px;
+  }
+  #news-carousel {
+    margin-top: 0px;
+  }
 }
