--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -459,6 +459,7 @@ section {
 .section-title {
   text-align: center;
   padding-bottom: 30px;
+  margin-top: 100px;
 }
 
 .section-title h2 {
@@ -725,7 +726,7 @@ section {
 --------------------------------------------------------------*/
 .services .icon-box {
   text-align: center;
-  border: 1px solid #e2eefd;
+  border: 1px solid black;
   padding: 80px 20px;
   transition: all ease-in-out 0.3s;
   background: #fff;
@@ -737,7 +738,7 @@ section {
   height: 64px;
   background: #f1f6fe;
   border-radius: 4px;
-  border: 1px solid #deebfd;
+  border: 1px solid black;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -746,7 +747,7 @@ section {
 }
 
 .services .icon-box .icon i {
-  color: #3b8af2;
+  color: black;
   font-size: 28px;
   transition: ease-in-out 0.3s;
 }
@@ -770,8 +771,8 @@ section {
 
 .services .icon-box:hover {
   border-color: #fff;
-  box-shadow: 0px 0 25px 0 rgba(16, 110, 234, 0.1);
-}
+  box-shadow: 0px 0 25px 0 grey;
+} 
 
 .services .icon-box:hover h4 a,
 .services .icon-box:hover .icon i {
