changed media root

--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -632,6 +632,12 @@ section {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
+
+.about {
+  margin-top: 50px;
+
+}
+
 .about .content h3 {
   font-weight: 600;
   font-size: 26px;
@@ -990,7 +996,7 @@ section {
 --------------------------------------------------------------*/
 
 .contact {
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 .contact .info-box {
