--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -32,7 +32,7 @@ h6 {
 }
 
 #favicon {
-  width: 120px;
+  width: 100px;
   height: 60px;
 }
 
@@ -81,6 +81,10 @@ h6 {
   transition: 0.3s;
 }
 
+#sub-topbar {
+  margin-top: 15px;
+}
+
 #topbar .contact-info a:hover {
   text-decoration: underline;
 }
@@ -89,6 +93,8 @@ h6 {
   padding-right: 4px;
   margin-left: 15px;
 }
+
+
 
 #topbar .contact-info i:first-child {
   margin-left: 0;
@@ -116,6 +122,7 @@ h6 {
   padding: 25px 0;
   top: 40px;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  height:75px;
 }
 
 #header.header-scrolled {
@@ -443,7 +450,6 @@ h6 {
 # Sections General
 --------------------------------------------------------------*/
 section {
-  padding: 60px 0;
   overflow: hidden;
 }
 
@@ -459,7 +465,7 @@ section {
 .section-title {
   text-align: center;
   padding-bottom: 30px;
-  margin-top: 100px;
+  margin-top:15px;
 }
 
 .section-title h2 {
@@ -1468,7 +1474,19 @@ small.text-muted {
 
 /* news-carousel */
 
-#news-carousel {
+.news-title {
+  margin-top: 150px;
+}
+
+.about-title {
+  margin-top: 100px;
+}
+
+.services-title {
+  margin-top: 50px;
+}
+
+.contact-title {
   margin-top: 100px;
 }
 
@@ -1476,6 +1494,11 @@ small.text-muted {
   width: 1000px;
   margin-top: 6.9px;
 }
+
+.cr {
+  margin-top: 22px;
+}
+
 
 .b-0 {
   bottom: 0;
@@ -1519,7 +1542,7 @@ small.text-muted {
 
 #related-image {
   object-fit: cover;
-  height: 200px;
+  height: 225px;
 }
 
 #related-container {
