--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -37,7 +37,7 @@ h6 {
 }
 
 #favicon-tr {
-  width: 300px;
+  width: 250px;
   height: 200px;
   padding-bottom: 39px;
   padding-left: 2px;
@@ -254,8 +254,6 @@ h6 {
   position: fixed;
   top: 55px;
   right: 15px;
-  bottom: 15px;
-  left: 15px;
   z-index: 9999;
   overflow-y: auto;
   background: #fff;
@@ -271,7 +269,9 @@ h6 {
   padding: 0;
   list-style: none;
 }
-
+.lead {
+  text-align: justify;
+}
 .mobile-nav a {
   display: block;
   position: relative;
